[gd_scene load_steps=16 format=2]

[ext_resource path="res://scene/MainMenu/gfx/buttons/massiveMultiplayer.png" type="Texture" id=1]
[ext_resource path="res://scene/MainMenu/gfx/buttons/joystickLeft.png" type="Texture" id=2]
[ext_resource path="res://scene/MainMenu/gfx/buttons/gear.png" type="Texture" id=3]
[ext_resource path="res://scene/MainMenu/gfx/buttons/exitLeft.png" type="Texture" id=4]
[ext_resource path="res://Assets/Fonts/montserrat_extrabold.otf" type="DynamicFontData" id=5]
[ext_resource path="res://scene/MainMenu/gfx/Background/space.jpeg" type="Texture" id=6]
[ext_resource path="res://scene/MainMenu/gfx/buttons/Music Square Button.png" type="Texture" id=7]
[ext_resource path="res://scene/MainMenu/Menu.gd" type="Script" id=8]
[ext_resource path="res://scene/MainMenu/sfx/menuSong.ogg" type="AudioStream" id=10]
[ext_resource path="res://scene/MainMenu/gfx/buttons/Mute col_Square Button.png" type="Texture" id=11]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=4]
Button/styles/hover = SubResource( 5 )
Button/styles/normal = SubResource( 6 )
Button/styles/pressed = SubResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 5 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 4.0
margin_bottom = 2.0
script = ExtResource( 8 )

[node name="CanvaMenu" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0

[node name="MenuBackground" type="Sprite" parent="CanvaMenu"]
position = Vector2( 517.5, 313 )
scale = Vector2( 1.09067, 1.12533 )
texture = ExtResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvaMenu"]
margin_left = 269.0
margin_top = 66.0
margin_right = 718.0
margin_bottom = 496.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
custom_constants/separation = 10
alignment = 1

[node name="solo_game_btn" type="Button" parent="CanvaMenu/VBoxContainer"]
margin_right = 449.0
margin_bottom = 100.0
theme = SubResource( 4 )
custom_colors/font_color_hover = Color( 0.831373, 0.878431, 0.117647, 1 )
custom_constants/hseparation = 30
custom_fonts/font = SubResource( 2 )
text = "Solo Game"
icon = ExtResource( 2 )
align = 0

[node name="multiplayer_btn" type="Button" parent="CanvaMenu/VBoxContainer"]
margin_top = 110.0
margin_right = 449.0
margin_bottom = 210.0
theme = SubResource( 4 )
custom_colors/font_color_hover = Color( 0.831373, 0.878431, 0.117647, 1 )
custom_constants/hseparation = 30
custom_fonts/font = SubResource( 2 )
text = "Multiplayer "
icon = ExtResource( 1 )
align = 0

[node name="options_btn" type="Button" parent="CanvaMenu/VBoxContainer"]
margin_top = 220.0
margin_right = 449.0
margin_bottom = 320.0
theme = SubResource( 4 )
custom_colors/font_color_hover = Color( 0.831373, 0.878431, 0.117647, 1 )
custom_constants/hseparation = 30
custom_fonts/font = SubResource( 2 )
text = "Options"
icon = ExtResource( 3 )
align = 0

[node name="exit_btn" type="Button" parent="CanvaMenu/VBoxContainer"]
margin_top = 330.0
margin_right = 449.0
margin_bottom = 430.0
theme = SubResource( 4 )
custom_colors/font_color_hover = Color( 0.831373, 0.878431, 0.117647, 1 )
custom_constants/hseparation = 30
custom_fonts/font = SubResource( 2 )
text = "Exit"
icon = ExtResource( 4 )
align = 0

[node name="music" type="AudioStreamPlayer" parent="CanvaMenu"]
stream = ExtResource( 10 )
volume_db = -55.0

[node name="muteBtn" type="TextureButton" parent="CanvaMenu"]
margin_left = 938.0
margin_top = 512.0
margin_right = 988.0
margin_bottom = 562.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 8
size_flags_vertical = 8
size_flags_stretch_ratio = 0.0
toggle_mode = true
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 11 )
expand = true

[connection signal="pressed" from="CanvaMenu/VBoxContainer/solo_game_btn" to="." method="_on_solo_game_btn_pressed"]
[connection signal="pressed" from="CanvaMenu/VBoxContainer/options_btn" to="." method="_on_options_btn_pressed"]
[connection signal="pressed" from="CanvaMenu/VBoxContainer/exit_btn" to="." method="_on_exit_btn_pressed"]
[connection signal="pressed" from="CanvaMenu/muteBtn" to="." method="_on_muteBtn_pressed"]
